# bufir

./: .clang-format  .gitignore  CMakeLists.txt  README.md
plans/: design-ui-plan.md
resources/: styles.qss
src/: clipboarddelegate.cpp  clipboarddelegate.h  clipboarditem.cpp  clipboarditem.h  clipboardmodel.cpp  clipboardmodel.h  clipboardmonitor.cpp  clipboardmonitor.h  database.cpp  database.h  globalhotkey.cpp  globalhotkey.h  main.cpp  mainwindow.cpp  mainwindow.h  systemtray.cpp  systemtray.h
